# nv

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
env/: config.toml
src/: args.rs  error.rs  main.rs
src/commands/: env.rs
src/proxy/: browser.rs  ca.rs  config.rs  keychain.rs  mod.rs  secrets.rs  server.rs
